OAK-11105: Remove usage of Guava ImmutableMap.of() - zero/one argument case (#1869)
* OAK-11105: Remove usage of Guava ImmutableMap.of() - zero argument case

* OAK-11105: simplify generics

* OAK-11105: remove ImmutableMap.of(a, b) - oak-benchmarks-elastic

* OAK-11105: remove ImmutableMap.of(a, b) - oak-benchmarks-lucene

* OAK-11105: remove ImmutableMap.of(a, b) - oak-benchmarks-solr

* OAK-11105: remove ImmutableMap.of(a, b) - oak-blob-plugins

* OAK-11105: remove ImmutableMap.of(a, b) - oak-auth-ldap

* OAK-11105: remove ImmutableMap.of(a, b) - oak-run-elastic

* OAK-11105: remove ImmutableMap.of(a, b) - oak-it

* OAK-11105: remove ImmutableMap.of(a, b) - oak-upgrade

* OAK-11105: remove ImmutableMap.of(a, b) - oak-doc

* OAK-11105: remove ImmutableMap.of(a, b) - oak-store-spi

* OAK-11105: remove ImmutableMap.of(a, b) - oak-benchmarks

* OAK-11105: remove ImmutableMap.of(a, b) - oak-store-document

* OAK-11105: remove ImmutableMap.of(a, b) - oak-lucene

* OAK-11105: remove ImmutableMap.of(a, b) - oak-store-composite

* OAK-11105: remove ImmutableMap.of(a, b) - oak-core-spi

* OAK-11105: remove ImmutableMap.of(a, b) - oak-jcr

* OAK-11105: remove ImmutableMap.of(a, b) - oak-segment-tar

* OAK-11105: remove ImmutableMap.of(a, b) - oak-authorization-cug

* OAK-11105: remove ImmutableMap.of(a, b) - oak-exercise

* OAK-11105: remove ImmutableMap.of(a, b) - oak-authorization-principalbased

* OAK-11105: remove ImmutableMap.of(a, b) - oak-security-spi

* OAK-11105: fix review comments

* OAK-11105: remove ImmutableMap.of(a, b) - oak-core

* OAK-11105: remove ImmutableMap.of(a, b) - oak-auth-external